- made app layout responsive

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,11 +2,6 @@
   --dark-grey: #adb5bd;
 }
 
-.text-orientation-upright {
-  writing-mode: vertical-rl;
-  text-orientation: upright;
-}
-
 .main-heading {
   color: var(--dark-grey);
 }
@@ -14,4 +9,11 @@
 .input-label {
   font-size: 0.8rem;
   font-weight: bold;
+}
+
+@media (min-width: 768px) {
+  .text-orientation-upright {
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+  }
 }
