- Implemented state-management for transactions - Implemented add transaction, list transactions and remove transaction - Populated amounts for income, expense and balance

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -11,9 +11,50 @@
   font-weight: bold;
 }
 
+.transaction-history-container {
+  height: 35rem;
+}
+
+.content {
+  overflow-y: scroll;
+  mask-image: linear-gradient(to top, transparent, black),
+    linear-gradient(to left, transparent 17px, black 17px);
+  mask-size: 100% 20000px;
+  mask-position: left bottom;
+  -webkit-mask-image: linear-gradient(to top, transparent, black),
+    linear-gradient(to left, transparent 17px, black 17px);
+  -webkit-mask-size: 100% 20000px;
+  -webkit-mask-position: left bottom;
+  transition: mask-position 0.3s, -webkit-mask-position 0.3s;
+  -webkit-mask-position: left top;
+}
+
+.main-container {
+  height: 100%;
+}
+
+.round {
+  border-radius: 50% !important;
+  width: 16px;
+  height: 16px;
+  font-size: 8px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 !important;
+  margin: 0 !important;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+
 @media (min-width: 768px) {
   .text-orientation-upright {
     writing-mode: vertical-rl;
     text-orientation: upright;
+  }
+
+  .main-container {
+    height: 100vh;
   }
 }
